# llmstart-homework

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.py  main.py  pyproject.toml  stop_bot.sh
.cursor/rules/: conventions.mdc  workflow.mdc
bot/: __init__.py  handlers.py
doc/: product_idea.md  tasklist.md  vision.md
doc/guides/: botfather.md
llm/: __init__.py  client.py
tests/: test_bot.py  test_llm.py
